--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     a more-or-less normal distribution of letters.</p>
                 <button class="btn">Shop Now</button>
             </div>
-            <img class="header-pic" src="Flower Asset/pngwing 10.png" alt="">
+            <img class="header-pic" src="asset/pngwing 10.png" alt="">
         </section>
     </header>
 
@@ -45,19 +45,19 @@
             <div class="main-flower">
                 <div class="tree-01">
                     <div class="pink-flower-resize">
-                        <img class="pink-flower" src="Flower Asset/pngwing 6.png" alt="Pink Flowe">
+                        <img class="pink-flower" src="asset/pngwing 6.png" alt="Pink Flowe">
                     </div>
                     <h3 class="underline">Pink Flowe Tree</h3>
                 </div>
                 <div class="tree-02">
                     <div class="bundle-flower-resize">
-                        <img class="bundle-flower" src="Flower Asset/pngwing 5.png" alt="Bundle Flower ">
+                        <img class="bundle-flower" src="asset/pngwing 5.png" alt="Bundle Flower ">
                         <h3 class="underline">Bundle Flower Tree</h3>
                     </div>
                 </div>
                 <div class="tree-03">
                     <div class="yallow-flower-resize">
-                        <img class="yallow-flower" src="Flower Asset/pngwing 7.png" alt="Yallow Flower">
+                        <img class="yallow-flower" src="asset/pngwing 7.png" alt="Yallow Flower">
                         <h3 class="underline">Yallow Flower Tree</h3>
                     </div>
                 </div>
@@ -73,7 +73,7 @@
                     readable content of a page when looking at its layout.</p>
                 <button class="btn">Sign Up</button>
             </div>
-            <img class="main-section-flower" src="Flower Asset/pngwing 8.png" alt="flower-pic">
+            <img class="main-section-flower" src="asset/pngwing 8.png" alt="flower-pic">
         </section>
 
         <!-- section-04 -->
@@ -86,35 +86,40 @@
             </div>
 
             <div class="main-flower-04">
-                <div><img src="Flower Asset/Flower 01.png" alt=""></div>
-                <div><img src="Flower Asset/Rectangle 4.png" alt=""></div>
-                <div><img src="Flower Asset/Rectangle 5.png" alt=""></div>
-                <div><img src="Flower Asset/Rectangle 6.png" alt=""></div>
+                <div><img src="asset/Flower 01.png" alt=""></div>
+                <div><img src="asset/Rectangle 4.png" alt=""></div>
+                <div><img src="asset/Rectangle 5.png" alt=""></div>
+                <div><img src="asset/Rectangle 6.png" alt=""></div>
             </div>
         </section>
 
 <!-- section-05 -->
 
-<section class="main-section-background-05">
-    <div>
-        <h1>Get The Latest Deals</h1>
-        <p>$30 coupon for first shopping</p>
-    </div>
-
-    <div>
-        <div>
-            <input placeholder="Enter your email here...." type="email" name="" id="" >
-        </div>
-        <div>
-            <button class="btn">Subscribe</button>
-        </div>
-    </div>
+<section class="main-section-05">
+<div class="main-sub-section-05">
+   <div>
+    <h1 class="section-05-head">Get The Latest Deals</h1>
+   </div>
+   <p class="section-05-discription">
+    $30 coupon for first shopping
+   </p>
+   <input class="email" placeholder="Enter your email here...." type="email" name="" id="">
+   <button class="btn-02">Subscribe</button>
+</div>
 </section>
+</main>
 
-
-    </main>
-    <footer>
-
+<!-- footer -->
+<footer class="footer-background-color">
+    <div class="footer-child">
+        <div>
+            <h1 class="footer-title">Flower <span class="span-02">Shop</span></h1> 
+        </div>
+        <p class="footer-discription">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+    
+        <p class="copy-right">@2020-2023, FlowerShop.com. All rights reserved. </p>
+    </div>
+    
     </footer>
 </body>
 
