--- a/index.html
+++ b/index.html
@@ -6,11 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flower Shop</title>
 
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com"> -->
-    <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet"> -->
-
-
     <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -91,6 +86,30 @@
                 <div><img src="asset/Rectangle 5.png" alt=""></div>
                 <div><img src="asset/Rectangle 6.png" alt=""></div>
             </div>
+        </section>
+        <!--------------------------------- bonus section --------------->
+        <section>
+
+            <h1 class="bonus-header"><span class="span-03">Our</span> Outletes</h1>
+
+            <div class="bonus-shop">
+                <div class="Outlete">
+                    <img class="shop" src="asset/48108.jpg" alt="">
+                    <h2>Outlete-01 </h2>
+                </div>
+
+                <div class="Outlete">
+                    <img class="shop" src="asset/17843314.jpg" alt="">
+                    <h2>Outlete-02</h2>
+                </div>
+
+                <div class="Outlete">
+                    <img class="shop" src="asset/11252103_20068083.jpg" alt="">
+                    <h2>Outlete-03</h2>
+                </div>
+            </div>
+
+
         </section>
 
         <!-- section-05 -->
